--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@
   }
   body {
     font-family: 'Noto Sans TC', sans-serif;
-    background: rgb(80, 79, 114);
+    background: rgb(40, 24, 98);
     letter-spacing: 0.1em;
   }
   .container {
     width: 80%;
     margin: 0 auto;
     margin-top: 80px;
-    text-align:center;
+    text-align:start;
   }
   .title{
     color: rgb(208,178,161);
@@ -52,4 +52,16 @@
     font-size: 20px;
     border-radius: 200px;
     cursor: pointer;
+  }
+  .line_icon{
+    width: 220px;
+    margin-top: 40px;
+  }
+  .content{
+    text-align: start;
+    font-size: 15px;
+    line-height: 22px;
+    color: white;
+    font-weight: normal;
+
   }
