--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
   }
   .message{
     margin-top: 20px;
-    color: rgb(208,178,161);
-    font-size: 11px;
+    color: rgb(235, 196, 174);
+    font-size: 13px;
     line-height: 18px;
   }
