--- a/style.css
+++ b/style.css
@@ -56,8 +56,10 @@
     cursor: pointer;
   }
   .line_icon{
-    width: 220px;
+    width: 170px;
     margin-top: 20px;
+    -webkit-filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.7));
+    filter: drop-shadow(1.5px 1.5px 4px rgba(0, 0, 0, 0.6))
   }
   .content{
     text-align: start;
